# udataclasses

./: .gitignore  .readthedocs.yaml  README.md  package.json  pyproject.toml
docs/: Makefile  api.rst  conf.py  diffs.rst  index.rst  requirements.txt
src/udataclasses/: __init__.py  __init__.pyi  bindings.py  constants.py  dataclass.py  decorator.py  decorator.pyi  default_factory.py  default_factory.pyi  field.py  functions.py  source.py  transform_spec.py
tests/: test_dataclass.py  test_functions.py  test_source.py  test_transform_spec.py
tests/micropython/: Dockerfile  pytest_shim.py  run.py  smoke_test.py
